--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,9 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "port": 4100
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
